--- a/Website/index.html
+++ b/Website/index.html
@@ -19,15 +19,15 @@
             <li><div class="dropdown">
                 <button class="dropbtn">Services</button><i class="fas fa-angle-down fa-xs"></i>
             <div class="dropdown-content">
-                    <a href="#">Illustration</a>
-                    <a href="#">Photography</a>
-                    <a href="#">Character Design</a>
-                    <a href="#">Concept Art</a>
+                    <a class="navlink" href="#">Illustration</a>
+                    <a class="navlink" href="#">Photography</a>
+                    <a class="navlink" href="#">Character Design</a>
+                    <a class="navlink" href="#">Concept Art</a>
             </div></li>
-            <li><a>Portfolio</a></li>
+            <li><a class="navlink">Portfolio</a></li>
             <li class="middle"><img class="logo" src="img/logo.png"></li>
-            <li><a>About Us</a></li>
-            <li><a>Contact Us</a></li>
+            <li><a class="navlink">About Us</a></li>
+            <li><a class="navlink">Contact Us</a></li>
         </ul>
     </div>
 
@@ -45,28 +45,21 @@
             </div>
             <a class="carousel-control-prev" href="#slideshow" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
                   </a>
                   <a class="carousel-control-next" href="#slideshow" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
                   </a>
           </div>
 
           <h2 class="title">What do we do?</h2>
 
-          <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae quo, libero quasi eaque ea ex, nobis corrupti dolorem veritatis atque necessitatibus eligendi esse adipisci minima a in illo? Accusamus, pariatur.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam tempora eius sunt quia provident quam, fugit itaque at facilis laudantium dolores recusandae enim ab excepturi consequuntur. Dolorum maiores quod nulla!
-
+          <p class="info">Starsky Studios comprises of a large number of highly talented and creative individuals who offer services ranging anywhere from photography to character design. We aim to offer high quality work that stands out, for that is what our name symbolizes. Each piece of work is meant to stand out, like the stars in the night sky. Our company slogan is "Shine bright like the stars in the night". Founded in 2019, we have been producing high quality work and have successfully served over 100 satisfied clients.
           </p>
 
           <div class="featured"><img src="img/star.png" width="80%">
-            <h2 class="featuredtitle1">Title</h2>
+            <h2 class="featuredtitle1">City Lights</h2>
         
-            <p class="info1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid praesentium temporibus explicabo, quae minima libero corporis unde vel possimus officia. Provident voluptate aliquam blanditiis maxime expedita cum nobis magnam? Quam.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium deleniti labore odit atque accusamus quibusdam nostrum suscipit ex, tempora iure repudiandae ratione nam beatae omnis expedita voluptas ipsum vero recusandae.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore molestiae praesentium quam. Voluptatibus totam illum esse rem, quis officia in cumque delectus dolores hic deserunt sit repudiandae! A, dolore velit.
-
+            <p class="info1">A stunning shot taken by one of our best photographers, this piece features extensive knowledge of what makes an image look great. The creative usage of the white lines on the bridge as leading lines guide the eye along the image towards the bright lights. The rule of thirds is also carefully applied here, with the brightest lights in the top right corner of the image. The beautiful contrast between the bright lights and dark night sky also improves the quality of the image by leaps and bounds.
             </p>
         
         <img class="featuredimg1" src="img/slide1.jpg">
@@ -78,13 +71,10 @@
 
     <div class="featured">
 
-        <h2 class="featuredtitle2">Title</h2>
+        <h2 class="featuredtitle2">Sunrise City</h2>
 
         <img class="featuredimg2" src="img/slide2.jpg">
-        <p class="info2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid praesentium temporibus explicabo, quae minima libero corporis unde vel possimus officia. Provident voluptate aliquam blanditiis maxime expedita cum nobis magnam? Quam.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium deleniti labore odit atque accusamus quibusdam nostrum suscipit ex, tempora iure repudiandae ratione nam beatae omnis expedita voluptas ipsum vero recusandae.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore molestiae praesentium quam. Voluptatibus totam illum esse rem, quis officia in cumque delectus dolores hic deserunt sit repudiandae! A, dolore velit.
-
+        <p class="info2">A beautifully illustrated piece of art by one of our professional artists. This illustration captures the beauty of a city and combines it with the pleasing colors of a sunrise. Not only is it aesthetically pleasing to look at, it also manages to draw attention to its subjects. The two characters in the image, despite being silhouettes, manage to capture our attention thanks to the contrast between the colors and the angular leading lines sprouting from them.
         </p>
 </div>
         <div class="bottom">
