--- a/Website/index.html
+++ b/Website/index.html
@@ -34,7 +34,7 @@
     <div id="slideshow" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                  <img src="img/slide1.jpg" class="d-block w-100" alt="...">
+                  <img src="img/slide1.jpg"  class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
                 <img src="img/slide2.jpg" class="d-block w-100" alt="...">
@@ -62,7 +62,7 @@
             <p class="info1">A stunning shot taken by one of our best photographers, this piece features extensive knowledge of what makes an image look great. The creative usage of the white lines on the bridge as leading lines guide the eye along the image towards the bright lights. The rule of thirds is also carefully applied here, with the brightest lights in the top right corner of the image. The beautiful contrast between the bright lights and dark night sky also improves the quality of the image by leaps and bounds.
             </p>
         
-        <img class="featuredimg1" src="img/slide1.jpg">
+        <img class="featuredimg1" src="img/featured1.jpg">
     </div>
     
     <div>
